Cleanup added G+ etc

--- a/custom_components/home.html
+++ b/custom_components/home.html
@@ -38,10 +38,10 @@
     background: #03a9f4;
     color: white;
   }
-      organizer-card {
-      margin-bottom: 30px;
+ organizer-card {
+      margin: 30px;
       width: 400px;
-    }
+  }
   
     
   </style>
@@ -67,7 +67,7 @@
     <div class="row">
     <h2 class="">Organizer Emeritus</h2>
 
-       <organizer-card plusid="BradArmstrong">
+       <organizer-card gplusid="BradArmstrong">
           <img src="http://lh3.googleusercontent.com/-dzLyvnE1l2w/AAAAAAAAAAI/AAAAAAAABrU/8HYjk5TJjHM/s120-c/photo.jpg" width="70" height="70" />
           <h2>Brad Armstrong</h2>
           <p>Android Team manager at Code42</p>
