--- a/custom_components/organizer-card.html
+++ b/custom_components/organizer-card.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../components/core-icon-button/core-icon-button.html">
 <link rel="import" href="../components/paper-shadow/paper-shadow.html">
 
-<polymer-element name="organizer-card">
+<polymer-element name="organizer-card" attributes="gplusid">
   <template>
     <style>
     :host {
@@ -33,7 +33,7 @@
 
       <paper-shadow z="3">
         <div class="card-header" layout horizontal center>
-          <content select="img"></content>
+          <a href="https://plus.google.com/+{{gplusid}}"><content select="img"></content></a>
           <content select="h2"></content>
         </div>
         <content></content>
@@ -41,6 +41,7 @@
 
   </template>
   <script>
-  Polymer({});
+  Polymer({
+  });
   </script>
 </polymer-element>
