--- a/custom_components/organizer-list.html
+++ b/custom_components/organizer-list.html
@@ -20,8 +20,7 @@
     <div horizontal  layout wrap>
       <template repeat="{{post in posts}}">
         <organizer-card
-          favorite="{{post.favorite}}"
-          on-favorite-tap="{{handleFavorite}}"
+          gplusid={{post.gplusid}}
           hidden?="{{show == 'favorites' && !post.favorite}}">
           <img src="{{post.avatar}}" width="70" height="70">
           <h2>{{post.username}}</h2>
