Update per Stephen Fluins layout idea

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <paper-icon-button class="menuButton" icon="menu" ></paper-icon-button>
       <paper-fab class="sourceButton bottom" icon="launch"></paper-fab>
     
-      <core-item label="Home" tag="home" url="custom_components/home.html"></core-item>
-      <core-item label="About" tag="about" url="custom_components/about.html"></core-item>
-      <core-item label="Conduct" tag="conduct" url="custom_components/conduct.html"></core-item>
-      <core-item label="Contact" tag="contact" url="custom_components/contact.html"></core-item>      
-      <core-item label="Sponsor" tag="sponsor" url="custom_components/sponsor.html"></core-item>      
+      <core-item label="Home" tag="home" url="home.html"></core-item>
+      <core-item label="About" tag="about" url="about.html"></core-item>
+      <core-item label="Conduct" tag="conduct" url="conduct.html"></core-item>
+      <core-item label="Contact" tag="contact" url="contact.html"></core-item>      
+      <core-item label="Sponsor" tag="sponsor" url="sponsor.html"></core-item>      
       
     </sampler-scaffold>
   
