--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,5 @@
 <link rel="import" href="components/polymer/polymer.html">
 <link rel="import" href="components/core-icon-button/core-icon-button.html">
-
 <polymer-element name="page-footer">
   <template>
     <style>
@@ -28,8 +27,6 @@
         }
     </style>
 
-
-
     <div class="container">
     <hr>
       <div layout horizontal center>
@@ -38,15 +35,15 @@
             </div>
     
             <div class="partner">
-              <a href="http://developers.google.com/"><img class="featurette-image img-responsive" src="../images/partners/google.png" alt="Google"></a>
+              <a href="http://developers.google.com/"><img class="featurette-image img-responsive" src="images/partners/google.png" alt="Google"></a>
             </div>
 
             <div class="partner">
-              <a href="http://code42.com"><img class="featurette-image img-responsive" src="../images/partners/code42.svg" ></a>
+              <a href="http://code42.com"><img class="featurette-image img-responsive" src="images/partners/code42.svg" ></a>
             </div>
 
             <div class="partner">
-              <a href="http://agosto.com"><img class="featurette-image img-responsive" src="../images/partners/Agosto_Logo_Large-60h.png" ></a>
+              <a href="http://agosto.com"><img class="featurette-image img-responsive" src="images/partners/Agosto_Logo_Large-60h.png" ></a>
             </div>
       </div>    
     <content></content>
