Link organizer profile to _new

--- a/custom_components/organizer-card.html
+++ b/custom_components/organizer-card.html
@@ -33,7 +33,7 @@
 
       <paper-shadow z="3">
         <div class="card-header" layout horizontal center>
-          <a href="https://plus.google.com/+{{gplusid}}"><content select="img"></content></a>
+          <a href="https://plus.google.com/+{{gplusid}}" target="_new"><content select="img"></content></a>
           <content select="h2"></content>
         </div>
         <content></content>
